[gd_scene load_steps=14 format=3 uid="uid://dng2iqsytyb72"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_l7eau"]
[ext_resource type="Texture2D" uid="uid://xj3h3m7xe531" path="res://graphics/sprites/player/guardian.png" id="2_a2356"]
[ext_resource type="Shader" path="res://shaders/spatial shaders/sprite3d_fog.gdshader" id="2_ovidc"]
[ext_resource type="Texture2D" uid="uid://tto7x3eghbjr" path="res://graphics/sprites/player/none.png" id="3_0l6ym"]
[ext_resource type="Script" path="res://scripts/player/camera_root.gd" id="3_eo5w1"]
[ext_resource type="AudioStream" uid="uid://dvip8isc7rg2n" path="res://sfx/player/ec_steps.wav" id="5_nm087"]
[ext_resource type="FontFile" uid="uid://0p4r1h52icbk" path="res://graphics/sprites/ui/p2totalk.fnt" id="6_q7wbx"]
[ext_resource type="AudioStream" uid="uid://bt6ioueosnk6j" path="res://sfx/player/p2talk/p2button.wav" id="7_5mgkc"]
[ext_resource type="PackedScene" uid="uid://ciyscr1kgpgnf" path="res://scenes/objects/setup/cam_setup.tscn" id="7_wt3nb"]
[ext_resource type="AudioStream" uid="uid://cak5q10c7t4y1" path="res://sfx/player/p2talk/p2initialize.wav" id="8_tern7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_s8dso"]
resource_name = "player_collision"
size = Vector3(1, 1.4, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fpn34"]
render_priority = 0
shader = ExtResource("2_ovidc")
shader_parameter/modulate_color = Color(1, 1, 1, 1)
shader_parameter/transparent_color = Color(1, 0, 1, 1)
shader_parameter/billboard = true
shader_parameter/albedoTex = ExtResource("2_a2356")
shader_parameter/is_spritesheet = false
shader_parameter/spritesheet_size = Vector2i(1, 1)
shader_parameter/sprite = Vector2i(0, 0)
shader_parameter/enable_auto_animation_x = false
shader_parameter/enable_auto_animation_y = false
shader_parameter/frame_count = 1
shader_parameter/frame_offset = 0
shader_parameter/animation_speed = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y38ro"]
render_priority = 0
shader = ExtResource("2_ovidc")
shader_parameter/modulate_color = Color(1, 1, 1, 1)
shader_parameter/transparent_color = Color(1, 0, 1, 1)
shader_parameter/billboard = true
shader_parameter/albedoTex = ExtResource("3_0l6ym")
shader_parameter/is_spritesheet = false
shader_parameter/spritesheet_size = Vector2i(1, 1)
shader_parameter/sprite = Vector2i(0, 0)
shader_parameter/enable_auto_animation_x = false
shader_parameter/enable_auto_animation_y = false
shader_parameter/frame_count = 1
shader_parameter/frame_offset = 0
shader_parameter/animation_speed = 1.0

[node name="player_root" type="Node3D"]

[node name="player" type="CharacterBody3D" parent="." groups=["Player"]]
transform = Transform3D(-1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0)
floor_block_on_wall = false
script = ExtResource("1_l7eau")

[node name="collision" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, -1.42109e-14, 0, 1, 0, 1.42109e-14, 0, 1, 0, 0.7, 0)
shape = SubResource("BoxShape3D_s8dso")

[node name="sprite" type="Sprite3D" parent="player" groups=["Player_sprite"]]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -0.03, 0)
material_override = SubResource("ShaderMaterial_fpn34")
cast_shadow = 0
offset = Vector2(0, 32)
pixel_size = 0.015
billboard = 1
shaded = true
texture_filter = 0
texture = ExtResource("2_a2356")
hframes = 5
vframes = 5

[node name="head" type="Sprite3D" parent="player/sprite"]
transform = Transform3D(-1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, 0, 0)
material_override = SubResource("ShaderMaterial_y38ro")
offset = Vector2(0, 35)
pixel_size = 0.015
billboard = 1
texture_filter = 0
texture = ExtResource("3_0l6ym")

[node name="footstep_controller" type="RayCast3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, -0.6, 0)
hit_from_inside = true
collide_with_areas = true
debug_shape_thickness = 5

[node name="footstep" type="AudioStreamPlayer3D" parent="player"]
stream = ExtResource("5_nm087")
attenuation_model = 3
volume_db = -80.0
panning_strength = 4.0
bus = &"SFX"

[node name="p2_talk_buttons" type="Label3D" parent="player" groups=["p2_word"]]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 1.8, 0)
offset = Vector2(0, 5)
billboard = 1
fixed_size = true
texture_filter = 0
font = ExtResource("6_q7wbx")
font_size = 34
outline_size = 0
uppercase = true

[node name="P2_talk" type="Node3D" parent="player/p2_talk_buttons"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -1, 0)

[node name="button_press" type="AudioStreamPlayer3D" parent="player"]
stream = ExtResource("7_5mgkc")
volume_db = 10.0
bus = &"HUD_SFX"

[node name="mode_change" type="AudioStreamPlayer3D" parent="player"]
stream = ExtResource("8_tern7")
volume_db = 10.0
bus = &"HUD_SFX"

[node name="camera_root" type="Node3D" parent="." groups=["Player_camera"]]
script = ExtResource("3_eo5w1")

[node name="cam_anchor" type="Node3D" parent="camera_root"]
transform = Transform3D(1, 0, 0, 0, 0.951057, 0.309017, 0, -0.309017, 0.951057, 0, 2.625, 8)

[node name="PSXLayer" parent="camera_root/cam_anchor" instance=ExtResource("7_wt3nb")]

[node name="OpenSheets" type="FileDialog" parent="."]
title = "Load Sheet"
initial_position = 1
size = Vector2i(312, 220)
always_on_top = true
extend_to_title = true
ok_button_text = "Open"
dialog_hide_on_ok = true
mode_overrides_title = false
file_mode = 0
access = 1
root_subfolder = "sheets"
filters = PackedStringArray("*.png")

[connection signal="file_selected" from="OpenSheets" to="player" method="_on_open_sheets_file_selected"]
